Plug in/Line/api_VecApi.h

#define VM_BEGINPAINT     6
#define VS_CC_ZOOMWIN      19201
#define VS_CC_ZOOMPAN      19202
#define VS_CC_PRINT        19203
#define VS_CC_PRNRECT      19204
#define VS_CC_EXPBMP       19205
#define VS_CC_POINT        19206
#define VS_CC_LINE         19207
#define VS_CC_CIRCLE       19208
#define VS_CC_ARC          19209
#define VS_CC_SECTOR       19210
#define VS_CC_ELLIPSE      19211
#define VS_CC_POLYLINE     19212
#define VS_CC_TEXT         19213
#define VS_CC_INSERT       19214
#define VS_CC_HATCH        19215
#define VS_CC_BITMAP       19216
#define VS_CC_SYMBOL       19217
#define VS_CC_RECT         19218
#define VS_CC_DIMHOR       19219
#define VS_CC_DIMVER       19220
#define VS_CC_DIMPAR       19221
#define VS_CC_DIMANG       19222
#define VS_CC_DIMRAD       19223
#define VS_CC_DIMDIAM      19224
#define VS_CC_DIMORD       19225
#define VS_CC_SELBYPOINT   19226
#define VS_CC_SELBYRECT    19227
#define VS_CC_SELBYPOLYGON 19228
#define VS_CC_SELBYPOLYLINE 19229
#define VS_CC_SELBYDIST    19230
#define VS_CC_MOVEGRIP     19231
#define VS_CC_ENTPROP      19232
#define VS_CC_MOVE         19233
#define VS_CC_COPY         19234
#define VS_CC_ROTATE       19235
#define VS_CC_SCALE        19236
#define VS_CC_MIRROR       19237
#define VS_CC_ERASE        19238
#define VS_CC_CREBLOCK     19239
#define VS_CC_EXPLODE      19240
#define VS_CC_SPLINE       19241
#define VS_CC_DIST         19242
#define VS_CC_INSVEC       19243
#define VS_CC_ENTSWAP      19244
#define VS_CC_ENTTOTOP     19245
#define VS_CC_ENTTOBOTTOM  19246
#define VS_SELOBJECTS   19301
#define VS_CORNER1      19302
#define VS_CORNER2      19303
#define VS_BASE_P       19304
#define VS_BASE_P1      19305
#define VS_BASE_P2      19306
#define VS_DISPLACE     19307
#define VS_POINT1       19308
#define VS_POINT2       19309
#define VS_POINT3       19310
#define VS_CENTER_P     19311
#define VS_RAD_P        19312
#define VS_START_P      19313
#define VS_END_P        19314
#define VS_RAD1ANG      19315
#define VS_RAD2         19316
#define VS_NEXT_P       19317
#define VS_INS_P        19318
#define VS_LEADER1      19319
#define VS_LEADER2      19320
#define VS_TEXT_P       19321
#define VS_ORD_P        19322
#define VS_ORD_X        19323
#define VS_ORD_Y        19324
#define VS_MOVE2        19325
#define VS_COPY2        19326
#define VS_ROTATE1      19327
#define VS_ROTATE2      19328
#define VS_ROTATE3      19329
#define VS_SCALE3       19330
#define VS_MIRROR1      19331
#define VS_MIRROR2      19332
#define VS_PICK_ENT     19333
#define VS_PICK_ENT1    19334
#define VS_PICK_ENT2    19335
#define VS_PAPER_UNLIMITED 19401
#define VS_PAPER_A0        19402
#define VS_PAPER_A1        19403
#define VS_PAPER_A2        19404
#define VS_PAPER_A3        19405
#define VS_PAPER_A4        19406
#define VS_PAPER_A5        19407
#define VS_PAPER_A6        19408
#define VS_PAPER_B0        19409
#define VS_PAPER_B1        19410
#define VS_PAPER_B2        19411
#define VS_PAPER_B3        19412
#define VS_PAPER_B4        19413
#define VS_PAPER_B5        19414
#define VS_PAPER_B6        19415
#define VS_PAPER_C0        19416
#define VS_PAPER_C1        19417
#define VS_PAPER_C2        19418
#define VS_PAPER_C3        19419
#define VS_PAPER_C4        19420
#define VS_PAPER_C5        19421
#define VS_PAPER_C6        19422
#define VS_PAPER_ANSI_A    19423
#define VS_PAPER_ANSI_B    19424
#define VS_PAPER_ANSI_C    19425
#define VS_PAPER_ANSI_D    19426
#define VS_PAPER_ANSI_E    19427
#define VS_PAPER_LETTER    19428
#define VS_PAPER_LEGAL     19429
#define VS_PAPER_EXECUTIVE 19430
#define VS_PAPER_LEDGER    19431
#define VS_PAPER_USER      19432
//-------------------------------------
// VeCAD point
//-------------------------------------
typedef struct tagVLPOINT {
  double x;
  double y;
}VLPOINT;
//-------------------------------------
// VeCAD Arc
//-------------------------------------
typedef struct tagVLARC {
  VLPOINT Cen;
  double  Rh;
  double  Rv;
  double  Ang0;
  double  AngArc;
  double  AngRot;
}VLARC;
//-------------------------------------
// used to pass parameters with VM_BEGINPAINT message
//-------------------------------------
typedef struct tagVLPAINTSTRUCT {
    HDC     hdc;         // output device context
    RECT    rcPaint;     // output window rectangle
    double  DwgLeft;     // drawing's limits for the window
    double  DwgBottom;
    double  DwgRight;
    double  DwgTop;
    double  ScaleX;      // horiz. scale, mm/pixel
    double  ScaleY;      // vert. scale, mm/pixel
}VLPAINTSTRUCT;
//-------------------------------------
// Properties of "Navigator" window (aerial view)
//-------------------------------------
typedef struct tagVLNAVIGATOR {
  int      Left;   
  int      Top; 
  int      Width; 
  int      Height;
  COLORREF ColorZoomRect;
  BOOL     Realtime;
}VLNAVIGATOR;
//-------------------------------------
// Properties of "Layers Manager" window
//-------------------------------------
typedef struct tagVLLAYWIN {
  int      Left;       
  int      Top;       
  int      Width;      
  int      Height;    
}VLLAYWIN;
// Drawing's callback function
typedef int (CALLBACK* DWGPROC)(int iDwg, UINT Msg, int Prm1, int Prm2, double Prm3, double Prm4, void* Prm5);
/*
#ifndef __cplusplus
  extern "C" {
#endif
*/

int  VC_API vlGetVersion ();
// Registration for user copy of VeCAD DLL
BOOL VC_API vlRegistration  (int RegCode);
// Set application-defined function that will receive messages from VeCAD
BOOL VC_API vlSetMsgHandler (DWGPROC pfDwgProc);
/////////////////////////////////////////////////
// VeCAD window functions
HWND VC_API vlWndCreate     (HWND hParent, int Style, int X, int Y, int W, int H);
BOOL VC_API vlWndResize     (HWND hVecWnd, int X, int Y, int W, int H);
BOOL VC_API vlWndSetTitle   (HWND hVecWnd, LPCTSTR pTitle);
BOOL VC_API vlWndSetMaxRect (HWND hVecWnd, const RECT* pRect);
BOOL VC_API vlWndSetCursor  (HWND hVecWnd, HCURSOR hCursor);
/////////////////////////////////////////////////
// Drawing object functions
int  VC_API vlDocCreate    (HWND hwVec);
BOOL VC_API vlDocDelete    (int iDwg);
int  VC_API vlDocSetActive (int iDwg);
int  VC_API vlDocGetActive ();
BOOL VC_API vlDocCopy      (int iDwgSrc,int iDwgDest,int Mode);
/////////////////////////////////////////////////
// All Next functions work with current drawing that 
// are set by vlDwgSetCurrent function

/////////////////////////////////////////////////
// Layout (pages,layers, text styles, etc...
// Parameters can be accessed via vlData...
int  VC_API vlPageAdd       (LPCTSTR szName, int Size, int Orient, int W, int H);
BOOL VC_API vlPageDelete    (int Index);
int  VC_API vlPageActive    (int Mode, int Index);
int  VC_API vlPageCount     ();
int  VC_API vlPageIndex     (LPCTSTR szName, int ID);
int  VC_API vlLayerAdd      (LPCTSTR szName, double LineWidth, COLORREF LineColor, COLORREF FillColor);
BOOL VC_API vlLayerDelete   (int Index);
int  VC_API vlLayerActive   (int Index);
int  VC_API vlLayerCount    ();
int  VC_API vlLayerIndex    (LPCTSTR szName, int ID);
int  VC_API vlStLineAdd     (LPCTSTR szName, LPCTSTR szDesc);
BOOL VC_API vlStLineDelete  (int Index);
int  VC_API vlStLineActive  (int Index);
int  VC_API vlStLineCount   ();
int  VC_API vlStLineIndex   (LPCTSTR szName, int ID);
int  VC_API vlStTextAdd     (LPCTSTR szName, LPCTSTR szFont, double Width, double Oblique, int Prec, BOOL Filled, BOOL Bold);
BOOL VC_API vlStTextDelete  (int Index);
int  VC_API vlStTextActive  (int Index);
int  VC_API vlStTextCount   ();
int  VC_API vlStTextIndex   (LPCTSTR szName, int ID);
BOOL VC_API vlStTextReload  ();
int  VC_API vlStHatchAdd    (LPCTSTR szName, LPCTSTR szDesc);
BOOL VC_API vlStHatchDelete (int Index);
int  VC_API vlStHatchActive (int Index);
int  VC_API vlStHatchCount  ();
int  VC_API vlStHatchIndex  (LPCTSTR szName, int ID);
int  VC_API vlStDimAdd      (LPCTSTR szName);
BOOL VC_API vlStDimDelete   (int Index);
int  VC_API vlStDimActive   (int Index);
int  VC_API vlStDimCount    ();
int  VC_API vlStDimIndex    (LPCTSTR szName, int ID);
int  VC_API vlStPointAdd    (LPCTSTR szName);
BOOL VC_API vlStPointDelete (int Index);
int  VC_API vlStPointActive (int Index);
int  VC_API vlStPointCount  ();
int  VC_API vlStPointIndex  (LPCTSTR szName, int ID);
int  VC_API vlGrPointAdd    (LPCTSTR szName);
BOOL VC_API vlGrPointDelete (int Index);
int  VC_API vlGrPointActive (int Index);
int  VC_API vlGrPointCount  ();
int  VC_API vlGrPointIndex  (LPCTSTR szName, int ID);
int  VC_API vlViewSave      (LPCTSTR szName);
BOOL VC_API vlViewDelete    (int Index);
int  VC_API vlViewRestore   (int Index);
int  VC_API vlViewCount     ();
int  VC_API vlViewIndex     (LPCTSTR szName, int ID);
int  VC_API vlPrnRectAdd    (double X, double Y, double W, double H, double Angle);
BOOL VC_API vlPrnRectDelete (int Index);
int  VC_API vlPrnRectCount  ();
BOOL VC_API vlPrnRectPrint  (int Index, HDC hPrintDC, double ScaleX, double ScaleY, double OriginX, double OriginY);
int  VC_API vlPrnRectAuto   (double Width, double Height);
BOOL VC_API vlBlockBegin    ();
int  VC_API vlBlockAdd      (LPCTSTR szName, double x, double y);
int  VC_API vlBlockAddF     (LPCTSTR szFileName, LPCTSTR szBlockName);
BOOL VC_API vlBlockDelete   (int Index);
int  VC_API vlBlockActive   (int Index);
int  VC_API vlBlockCount    ();
int  VC_API vlBlockIndex    (LPCTSTR szName, int ID);