Packages/VECAD52/vecad52/VECAD/api_VecApi.pas


VS_CC_ZOOMWIN   = 19201;
VS_CC_ZOOMPAN   = 19202;
VS_CC_PRINT     = 19203;
VS_CC_PRNRECT   = 19204;
VS_CC_EXPBMP    = 19205;
VS_CC_POINT     = 19206;
VS_CC_LINE      = 19207;
VS_CC_CIRCLE    = 19208;
VS_CC_ARC       = 19209;
VS_CC_SECTOR    = 19210;
VS_CC_ELLIPSE   = 19211;
VS_CC_POLYLINE  = 19212;
VS_CC_TEXT      = 19213;
VS_CC_INSERT    = 19214;
VS_CC_HATCH     = 19215;
VS_CC_BITMAP    = 19216;
VS_CC_SYMBOL    = 19217;
VS_CC_RECT      = 19218;
VS_CC_DIMHOR    = 19219;
VS_CC_DIMVER    = 19220;
VS_CC_DIMPAR    = 19221;
VS_CC_DIMANG    = 19222;
VS_CC_DIMRAD    = 19223;
VS_CC_DIMDIAM   = 19224;
VS_CC_DIMORD    = 19225;
VS_CC_SELBYPOINT   = 19226;
VS_CC_SELBYRECT    = 19227;
VS_CC_SELBYPOLYGON = 19228;
VS_CC_SELBYPOLYLINE = 19229;
VS_CC_SELBYDIST = 19230;
VS_CC_MOVEGRIP  = 19231;
VS_CC_ENTPROP   = 19232;
VS_CC_MOVE      = 19233;
VS_CC_COPY      = 19234;
VS_CC_ROTATE    = 19235;
VS_CC_SCALE     = 19236;
VS_CC_MIRROR    = 19237;
VS_CC_ERASE     = 19238;
VS_CC_CREBLOCK  = 19239;
VS_CC_EXPLODE   = 19240;
VS_CC_SPLINE    = 19241;
VS_CC_DIST      = 19242;
VS_CC_INSVEC    = 19243;
VS_CC_ENTSWAP     = 19244;
VS_CC_ENTTOTOP    = 19245;
VS_CC_ENTTOBOTTOM = 19246;

VS_SELOBJECTS   = 19301;
VS_CORNER1      = 19302;
VS_CORNER2      = 19303;
VS_BASE_P       = 19304;
VS_BASE_P1      = 19305;
VS_BASE_P2      = 19306;
VS_DISPLACE     = 19307;
VS_POINT1       = 19308;
VS_POINT2       = 19309;
VS_POINT3       = 19310;
VS_CENTER_P     = 19311;
VS_RAD_P        = 19312;
VS_START_P      = 19313;
VS_END_P        = 19314;
VS_RAD1ANG      = 19315;
VS_RAD2         = 19316;
VS_NEXT_P       = 19317;
VS_INS_P        = 19318;
VS_LEADER1      = 19319;
VS_LEADER2      = 19320;
VS_TEXT_P       = 19321;
VS_ORD_P        = 19322;
VS_ORD_X        = 19323;
VS_ORD_Y        = 19324;
VS_MOVE2        = 19325;
VS_COPY2        = 19326;
VS_ROTATE1      = 19327;
VS_ROTATE2      = 19328;
VS_ROTATE3      = 19329;
VS_SCALE3       = 19330;
VS_MIRROR1      = 19331;
VS_MIRROR2      = 19332;
VS_PICK_ENT     = 19333;
VS_PICK_ENT1    = 19334;
VS_PICK_ENT2    = 19335;

VS_PAPER_UNLIMITED = 19401;
VS_PAPER_A0        = 19402;
VS_PAPER_A1        = 19403;
VS_PAPER_A2        = 19404;
VS_PAPER_A3        = 19405;
VS_PAPER_A4        = 19406;
VS_PAPER_A5        = 19407;
VS_PAPER_A6        = 19408;
VS_PAPER_B0        = 19409;
VS_PAPER_B1        = 19410;
VS_PAPER_B2        = 19411;
VS_PAPER_B3        = 19412;
VS_PAPER_B4        = 19413;
VS_PAPER_B5        = 19414;
VS_PAPER_B6        = 19415;
VS_PAPER_C0        = 19416;
VS_PAPER_C1        = 19417;
VS_PAPER_C2        = 19418;
VS_PAPER_C3        = 19419;
VS_PAPER_C4        = 19420;
VS_PAPER_C5        = 19421;
VS_PAPER_C6        = 19422;
VS_PAPER_ANSI_A    = 19423;
VS_PAPER_ANSI_B    = 19424;
VS_PAPER_ANSI_C    = 19425;
VS_PAPER_ANSI_D    = 19426;
VS_PAPER_ANSI_E    = 19427;
VS_PAPER_LETTER    = 19428;
VS_PAPER_LEGAL     = 19429;
VS_PAPER_EXECUTIVE = 19430;
VS_PAPER_LEDGER    = 19431;
VS_PAPER_USER      = 19432;


//-------------------------------------
// VeCAD point
//-------------------------------------
type
  RECT = record
    left : Integer;
    top : Integer;
    right : Integer;
    bottom : Integer;
  end;
  PRECT = ^RECT;

  VLPOINT = record
    x : Double;
    y : Double;
  end;
  PVLPOINT =^VLPOINT;

  VLARC = record
    Cen : VLPOINT;
    Rh : Double;
    Rv : Double;
    Ang0 : Double;
    AngArc : Double;
    AngRot : Double;
  end;
  PVLARC = ^VLARC;

//-------------------------------------
// used to pass parameters with VM_BEGINPAINT message
//-------------------------------------
  VLPAINTSTRUCT = record
    dc : HDC;
    rcPaint : RECT;
    DwgLeft : Double;
    DwgBottom : Double;
    DwgRight : Double;
    DwgTop : Double;
    ScaleX : Double;
    ScaleY : Double;
  end;
  PVLPAINTSTRUCT = ^VLPAINTSTRUCT;

//-------------------------------------
// Properties of "Navigator" window (aerial view)
//-------------------------------------
  VLNAVIGATOR = record
    Left : Integer;
    Top : Integer;
    Width : Integer;
    Height : Integer;
    ColorZoomRect : Integer;
    Realtime : Integer;
  end;
  PVLNAVIGATOR = ^VLNAVIGATOR;

//-------------------------------------
// Properties of "Layers Manager" window
//-------------------------------------
  VLLAYWIN = record
    Left : Integer;
    Top : Integer;
    Width : Integer;
    Height : Integer;
  end;
  PVLLAYWIN = ^VLLAYWIN;



/////////////////////////////////////////////////
// Vecad functions definitions

Function vlGetVersion :Integer; stdcall; external 'vecad52.dll';

// Registration for user copy of VeCAD DLL
Function vlRegistration  (RegCode: Integer): Boolean; stdcall; external 'vecad52.dll';

// Set application-defined function that will receive messages from VeCAD
Function vlSetMsgHandler (pfDwgProc: Pointer): Boolean; stdcall; external 'vecad52.dll';

/////////////////////////////////////////////////
// VeCAD window functions
Function vlWndCreate       (parent: HWND; style,x,y,w,h: Integer): HWND; stdcall; external 'vecad52.dll';
Function vlWndResize       (hWnd: HWND; X,Y,W,H: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlWndSetTitle     (hWnd: HWND; pTitle: Pchar): Boolean; stdcall; external 'vecad52.dll';
Function vlWndSetMaxRect   (hWnd: HWND; Rect: PRect): Boolean; stdcall; external 'vecad52.dll';
Function vlWndSetCursor    (hWnd: HWND; hCursor: HCURSOR): Boolean; stdcall; external 'vecad52.dll';

/////////////////////////////////////////////////
// Drawing object functions
Function vlDocCreate     (hwVec: HWND):Integer; stdcall; external 'vecad52.dll';
Function vlDocDelete     (iDwg: Integer):Boolean; stdcall; external 'vecad52.dll';
Function vlDocSetActive  (iDwg: Integer):Integer; stdcall; external 'vecad52.dll';
Function vlDocGetActive  :Integer; stdcall; external 'vecad52.dll';
Function vlDocCopy       (iDwgSrc, iDwgDest, Mode: Integer):Boolean; stdcall; external 'vecad52.dll';

/////////////////////////////////////////////////
// All Next functions work with current drawing that 
// are set by vlDwgSetCurrent function

/////////////////////////////////////////////////
// Layout (pages,layers, text styles, etc...
// Parameters can be accessed via vlData...

Function vlPageAdd       (Name: Pchar; Size, Orient, W, H: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlPageDelete    (Index: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlPageActive    (Mode, Index: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlPageCount     : Integer; stdcall; external 'vecad52.dll';
Function vlPageIndex     (Name: Pchar; ID: Integer): Integer; stdcall; external 'vecad52.dll';

Function vlLayerAdd      (Name: Pchar; LineWidth: Double; LineColor, FillColor: COLORREF): Integer; stdcall; external 'vecad52.dll';
Function vlLayerDelete   (Index: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlLayerActive   (Index: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlLayerCount    : Integer; stdcall; external 'vecad52.dll';
Function vlLayerIndex    (Name: Pchar; ID: Integer): Integer; stdcall; external 'vecad52.dll';

Function vlStLineAdd     (Name, Desc: Pchar): Integer; stdcall; external 'vecad52.dll';
Function vlStLineDelete  (Index: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlStLineActive  (Index: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlStLineCount   : Integer; stdcall; external 'vecad52.dll';
Function vlStLineIndex   (Name: Pchar; ID: Integer): Integer; stdcall; external 'vecad52.dll';

Function vlStTextAdd     (Name, Font: Pchar; Width, Oblique: Double; Prec: Integer; Filled, Bold: Boolean): Integer; stdcall; external 'vecad52.dll';
Function vlStTextDelete  (Index: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlStTextActive  (Index: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlStTextCount   : Integer; stdcall; external 'vecad52.dll';
Function vlStTextIndex   (Name: Pchar; ID: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlStTextReload  : Boolean; stdcall; external 'vecad52.dll';

Function vlStHatchAdd    (Name, Desc: Pchar): Integer; stdcall; external 'vecad52.dll';
Function vlStHatchDelete (Index: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlStHatchActive (Index: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlStHatchCount  : Integer; stdcall; external 'vecad52.dll';
Function vlStHatchIndex  (Name: Pchar; ID: Integer): Integer; stdcall; external 'vecad52.dll';

Function vlStDimAdd      (Name: Pchar): Integer; stdcall; external 'vecad52.dll';
Function vlStDimDelete   (Index: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlStDimActive   (Index: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlStDimCount    : Integer; stdcall; external 'vecad52.dll';
Function vlStDimIndex    (Name: Pchar; ID: Integer): Integer; stdcall; external 'vecad52.dll';

Function vlStPointAdd    (Name: Pchar): Integer; stdcall; external 'vecad52.dll';
Function vlStPointDelete (Index: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlStPointActive (Index: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlStPointCount  : Integer; stdcall; external 'vecad52.dll';
Function vlStPointIndex  (Name: Pchar; ID: Integer): Integer; stdcall; external 'vecad52.dll';

Function vlGrPointAdd    (Name: Pchar): Integer; stdcall; external 'vecad52.dll';
Function vlGrPointDelete (Index: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlGrPointActive (Index: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlGrPointCount  : Integer; stdcall; external 'vecad52.dll';
Function vlGrPointIndex  (Name: Pchar; ID: Integer): Integer; stdcall; external 'vecad52.dll';

Function vlViewSave      (Name: Pchar): Integer; stdcall; external 'vecad52.dll';
Function vlViewDelete    (Index: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlViewRestore   (Index: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlViewCount     : Integer; stdcall; external 'vecad52.dll';
Function vlViewIndex     (Name: Pchar; ID: Integer): Integer; stdcall; external 'vecad52.dll';

Function vlPrnRectAdd    (X, Y, W, H, Angle: Double): Integer; stdcall; external 'vecad52.dll';
Function vlPrnRectDelete (Index: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlPrnRectCount  : Integer; stdcall; external 'vecad52.dll';
Function vlPrnRectPrint  (Index: Integer; hPrintDC: HDC; ScaleX,ScaleY,OriginX,OriginY: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlPrnRectAuto   (Width, Height: Double): Integer; stdcall; external 'vecad52.dll';

Function vlBlockBegin    : Boolean; stdcall; external 'vecad52.dll';
Function vlBlockAdd      (Name: Pchar; X, Y: Double): Integer; stdcall; external 'vecad52.dll';
Function vlBlockAddF     (FileName, BlockName: Pchar): Integer; stdcall; external 'vecad52.dll';
Function vlBlockDelete   (Index: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlBlockActive   (Index: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlBlockCount    : Integer; stdcall; external 'vecad52.dll';
Function vlBlockIndex    (Name: Pchar; ID: Integer): Integer; stdcall; external 'vecad52.dll';

